--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "eslint-plugin-react-hooks": "2.0.1",
     "firebase": "6.6.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
